# NativeProject

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/a/news/nativeproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PngPreviewController.cpp  native-lib.cpp
app/src/main/java/com/a/news/nativeproject/: MainActivity.kt  PngPreviewActivity.java  PngPreviewController.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/a/news/nativeproject/: ExampleUnitTest.kt
ffmpeg/: build.gradle
filemanager/src/androidTest/java/com/a/news/filemanager/: ExampleInstrumentedTest.kt
filemanager/src/main/: AndroidManifest.xml
filemanager/src/test/java/com/a/news/filemanager/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mp3encode3/: build.gradle
mp3encode3/src/androidTest/java/com/a/news/mp3encode/: ExampleInstrumentedTest.kt
mp3encode3/src/main/: AndroidManifest.xml
mp3encode3/src/main/cpp/: AudioEncoder.cpp  CMakeLists.txt  Mp3Encoder.h  native-lib.cpp
mp3encode3/src/main/cpp/libmp3_encoder/: mp3_encoder.h
mp3encode3/src/main/java/com/a/news/mp3encode/: MainActivity.java  MainActivity.kt  Mp3Encoder.java
mp3encode3/src/main/res/values/: strings.xml
mp3encode3/src/test/java/com/a/news/mp3encode/: ExampleUnitTest.kt
poke_ar/: build.gradle
poke_ar/src/androidTest/java/com/a/news/poke_ar/: ExampleInstrumentedTest.kt
poke_ar/src/main/: AndroidManifest.xml
poke_ar/src/main/java/com/a/news/poke_ar/: MainActivity.kt
poke_ar/src/main/res/layout/: activity_main.xml
poke_ar/src/main/res/values/: strings.xml
poke_ar/src/test/java/com/a/news/poke_ar/: ExampleUnitTest.kt
